# midas

./: .eslintrc.json  .gitignore  .prettierrc  .vscodeignore  BUGS.MD  CHANGELOG.md  Gemfile  LICENSE  README.md  _config.yml  babel.config.json  dap_init  dap_requests.js  extension.js  jsconfig.json  package-lock.json  package.json  posts.md  pyproject.toml  tool-dependencies.json  vsc-extension-quickstart.md
.github/workflows/: channel.yml  publish.yml  test.yml
_includes/: comments.html
_posts/: 2022-04-04-empty-post.md  2022-05-24-midas-release-0.4.1.md
docs/: BUGS.MD  CHANGELOG.md  USAGE.md
drafts/: YYYY-DD-MM-template.md
modules/: .gdb_rrinit  activateDebuggerExtension.js  buildMode.js  c++stdlib.ignore  commandsRegistry.js  constants.js  customCommands.js  debugSession.js  debugSessionCustomRequests.js  debuggerInterface.js  executionContextState.js  executionState.js  gdb-mixin.js  gdb.js  gdbCommand.js  gdbInterface.js  gdbtypes.js  getvar.py  kernelsettings.js  midas.py  netutils.js  prettyprinter.js  rrutils.js  scripts.js  sessionConfig.js  shared.js  spawn.js  spawner.js  terminalInterface.js  toolchain.js  utils.js  variableObjects.js  variablesHandler.js
modules/dap/: base-process-handle.js  dap-base.js  dap-utils.js  gdb.js  mdb.js
modules/gdb-dap/: debugSession.js
modules/providers/: initializer.js  midas-canonical.js  midas-dap-gdb.js  midas-gdb.js  midas-native.js  midas-rr.js
modules/python/: apt.py  apt_manager.py  buildStackTrace.py  config.py  current_file.py  data_breakpoint_info_request.py  disassemble.py  dnf_manager.py  exception_logger.py  execution_context.py  frame_operations.py  gdb-assertions.py  get_os_pids.py  getvar.py  memory_request.py  midas.py  midas_commands.py  midas_report.py  midas_utils.py  pacman_manager.py  reset_request.py  rr_commands.py  rust.py  scopes_request.py  setbreakpoints_request.py  setup.py  stack.py  stackFrameState.py  stackframe.py  stacktrace_request.py  stacktracerequest.py  stdlib.py  utils.py  variable.py  variables_request.py  variablesrequest.py  watch_variable.py  watchpoint.py  watchpoint_request.py
modules/python/dap-wrapper/: dap.py  init_rr.py  logger.py  rrinit  rrinit - full  variables_reference.py
modules/python/tmp/: getvar.py
modules/ui/checkpoints/: checkpoints.js  main.css  main.js  ui_protocol.js  vscode.css
modules/utils/: installerProgress.js  log.js  netutils.js  releaseNotes.js  rrutils.js  sysutils.js  utils.js
modules/variablesrequest/: args.js  locals.js  mod.js  reference.js  registers.js  stackFramestate.js  statics.js  structs.js  variablesReference.js
release_notes/: 0.19.0.md  0.19.10.md  0.19.11.md  0.19.15.md  0.19.17.md  0.19.18.md  0.19.2.md  0.19.7.md  0.19.8.md  0.20.3.md  0.20.4.md  0.22.0.md  0.22.2.md  0.23.0.md  0.23.1.md  0.23.3.md  0.25.0.md  template.md
test/: runTest.js
test/cppworkspace/: CMakeLists.txt  PrettyPrinters.py  build.sh  buildws.sh
test/cppworkspace/attach/: CMakeLists.txt  README.md  testspawn.sh
test/cppworkspace/attach/src/: main.cpp
test/cppworkspace/include/: number.hpp  string.hpp  todo.hpp  types.hpp  vector.hpp
test/cppworkspace/multi-process/: CMakeLists.txt  README.md
test/cppworkspace/multi-process/src/: ls.cpp  main.cpp
test/cppworkspace/printers/: FooPrinter.js  IntPrinter.js  StdOptionalPrinter.js
test/cppworkspace/rr/: CMakeLists.txt  buffer_overflow.cpp  segfault.cpp
test/cppworkspace/simple_input/: CMakeLists.txt
test/cppworkspace/simple_input/src/: main.cpp
test/cppworkspace/test/: CMakeLists.txt  testspawn.sh
test/cppworkspace/test/include/: date.hpp
test/cppworkspace/test/src/: baseclasses.cpp  baseclasses.hpp  date.cpp  enum.cpp  enum.hpp  main.cpp  todo.cpp
test/cppworkspace/test/src/testcase_namespaces/: baseclasses.cpp  derive.cpp  derive.hpp  exceptions.cpp  exceptions.hpp  longstack.cpp  longstack.hpp  pp.cpp  pp.hpp  statics.cpp  statics.hpp  structrequests.cpp  structrequests.hpp  test_freefloating_watch.cpp  test_freefloating_watch.hpp  test_ptrs.cpp  test_ptrs.hpp
test/cppworkspace/testrrdbg/: CMakeLists.txt  README.md
test/cppworkspace/testrrdbg/include/: date.hpp  number.hpp
test/cppworkspace/testrrdbg/src/: main.cpp
test/cppworkspace/thread/: CMakeLists.txt
test/cppworkspace/thread/src/: main.cpp  todo.cpp
test/suite/: buildcppworkspace.js  debugAdapter.test.js  debugServer.js  extension.test.js  index.js  midasDebugAdapter.test.js
